@@ -21,6 +21,7 @@ Fix special paste operations (!= OverWrite) do not undo properly.
 Fix undo of pasting styles.
 Fix undo of pasting comments.
 Fix crash in cell insertion/removal dialog.
+Fix the cell shift command and its cell repainting for non-contiguous selections.
 
 Developer-Visible Only
 ----------------------
